codex_latinus/target/generated-sources/antlr4/com/mycompany/antlr4/CodexLatinusParser.java
// Generated from com/mycompany/antlr4/CodexLatinus.g4 by ANTLR 4.13.2
package com.mycompany.antlr4;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class CodexLatinusParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WS=1, COMS_I=2, COMS=3, INT=4, DEC=5, TEXT=6, CHAR=7, BOOL=8, VERUM=9, 
		FALSUS=10, PR=11, IT=12, ES=13, SR=14, FC=15, DUM=16, PER=17, AT=18, SI=19, 
		FN=20, RT=21, RD=22, ST=23, AC=24, VAR=25, FNS=26, MUN=27, MAI=28, PAA=29, 
		PAC=30, LLAA=31, LLAC=32, CORA=33, CORC=34, DPUN=35, PCO=36, MAY=37, MAYI=38, 
		MEN=39, MENI=40, MAS=41, MENOS=42, POR=43, DIV=44, INCRE=45, DECRE=46, 
		AND=47, OR=48, DIF=49, IGU=50, NON=51, COM=52, PUN=53, LEER=54, IMPRI=55, 
		ASIG=56, TXT=57, DECI=58, NUME=59, LITT=60, ID=61;
	public static final int
		RULE_prog = 0, RULE_var_glo = 1, RULE_l_decl = 2, RULE_decl = 3, RULE_functs = 4, 
		RULE_l_met = 5, RULE_met = 6, RULE_main = 7, RULE_l_inst = 8, RULE_declS = 9, 
		RULE_condi = 10, RULE_sino = 11, RULE_default = 12, RULE_cicloS = 13, 
		RULE_paren_expr = 14, RULE_bloque = 15, RULE_cicloD = 16, RULE_cicloP = 17, 
		RULE_comple = 18, RULE_inst = 19, RULE_l_impri = 20, RULE_impri = 21, 
		RULE_lectura = 22, RULE_asign = 23, RULE_metodo = 24, RULE_funcion = 25, 
		RULE_valor = 26, RULE_c_met = 27, RULE_variables = 28, RULE_declStru = 29, 
		RULE_l_val = 30, RULE_val = 31, RULE_struct = 32, RULE_l_atrib = 33, RULE_atrib_pcoma = 34, 
		RULE_atrib = 35, RULE_lista = 36, RULE_l_exp = 37, RULE_tipo = 38, RULE_expr = 39, 
		RULE_and = 40, RULE_iguDif = 41, RULE_menMay = 42, RULE_sumRes = 43, RULE_mulDiv = 44, 
		RULE_unario = 45, RULE_term = 46, RULE_identi = 47, RULE_c_identi = 48, 
		RULE_ll_func = 49, RULE_access_a = 50;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "var_glo", "l_decl", "decl", "functs", "l_met", "met", "main", 
			"l_inst", "declS", "condi", "sino", "default", "cicloS", "paren_expr", 
			"bloque", "cicloD", "cicloP", "comple", "inst", "l_impri", "impri", "lectura", 
			"asign", "metodo", "funcion", "valor", "c_met", "variables", "declStru", 
			"l_val", "val", "struct", "l_atrib", "atrib_pcoma", "atrib", "lista", 
			"l_exp", "tipo", "expr", "and", "iguDif", "menMay", "sumRes", "mulDiv", 
			"unario", "term", "identi", "c_identi", "ll_func", "access_a"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, "'bool'", "'verum'", 
			"'falsus'", "'perge'", "'interrumpe'", "'esto'", "'series'", "'facere'", 
			"'dum'", "'per'", "'aliter'", "'si'", "'finis'", "'ratio'", "'reddere'", 
			"'structura'", "'actio'", "'VARIABILES'", "'FINIS'", "'MUNERA'", "'MAIOR'", 
			"'('", "')'", "'{'", "'}'", "'['", "']'", "':'", "';'", "'>'", "'>='", 
			"'<'", "'<='", "'+'", "'-'", "'*'", "'/'", "'++'", "'--'", "'&&'", "'||'", 
			"'!='", "'=='", "'non'", "','", "'.'", "'<<'", "'>>'", "'='", "'textum'", 
			"'decimalis'", "'numerus'", "'littera'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "WS", "COMS_I", "COMS", "INT", "DEC", "TEXT", "CHAR", "BOOL", "VERUM", 
			"FALSUS", "PR", "IT", "ES", "SR", "FC", "DUM", "PER", "AT", "SI", "FN", 
			"RT", "RD", "ST", "AC", "VAR", "FNS", "MUN", "MAI", "PAA", "PAC", "LLAA", 
			"LLAC", "CORA", "CORC", "DPUN", "PCO", "MAY", "MAYI", "MEN", "MENI", 
			"MAS", "MENOS", "POR", "DIV", "INCRE", "DECRE", "AND", "OR", "DIF", "IGU", 
			"NON", "COM", "PUN", "LEER", "IMPRI", "ASIG", "TXT", "DECI", "NUME", 
			"LITT", "ID"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "CodexLatinus.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CodexLatinusParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgContext extends ParserRuleContext {
		public MainContext main() {
			return getRuleContext(MainContext.class,0);
		}
		public TerminalNode FNS() { return getToken(CodexLatinusParser.FNS, 0); }
		public TerminalNode PCO() { return getToken(CodexLatinusParser.PCO, 0); }
		public Var_gloContext var_glo() {
			return getRuleContext(Var_gloContext.class,0);
		}
		public FunctsContext functs() {
			return getRuleContext(FunctsContext.class,0);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CodexLatinusListener ) ((CodexLatinusListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CodexLatinusListener ) ((CodexLatinusListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CodexLatinusVisitor ) return ((CodexLatinusVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==VAR) {
				{
				setState(102);
				var_glo();
				}
			}

			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==MUN) {
				{
				setState(105);
				functs();
				}
			}

			setState(108);
			main();
			setState(109);
			match(FNS);
			setState(110);
			match(PCO);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Var_gloContext extends ParserRuleContext {
		public TerminalNode VAR() { return getToken(CodexLatinusParser.VAR, 0); }
		public TerminalNode MAY() { return getToken(CodexLatinusParser.MAY, 0); }
		public L_declContext l_decl() {
			return getRuleContext(L_declContext.class,0);
		}
		public Var_gloContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_glo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CodexLatinusListener ) ((CodexLatinusListener)listener).enterVar_glo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CodexLatinusListener ) ((CodexLatinusListener)listener).exitVar_glo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CodexLatinusVisitor ) return ((CodexLatinusVisitor<? extends T>)visitor).visitVar_glo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Var_gloContext var_glo() throws RecognitionException {
		Var_gloContext _localctx = new Var_gloContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_var_glo);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			match(VAR);
			setState(113);
			match(MAY);
			setState(114);
			l_decl();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class L_declContext extends ParserRuleContext {
		public List<DeclContext> decl() {
			return getRuleContexts(DeclContext.class);
		}
		public DeclContext decl(int i) {
			return getRuleContext(DeclContext.class,i);
		}
		public L_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_l_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CodexLatinusListener ) ((CodexLatinusListener)listener).enterL_decl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CodexLatinusListener ) ((CodexLatinusListener)listener).exitL_decl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CodexLatinusVisitor ) return ((CodexLatinusVisitor<? extends T>)visitor).visitL_decl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final L_declContext l_decl() throws RecognitionException {
		L_declContext _localctx = new L_declContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_l_decl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(116);
				decl();
				}
				}
				setState(119); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 8413184L) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclContext extends ParserRuleContext {
		public DeclSContext declS() {
			return getRuleContext(DeclSContext.class,0);
		}
		public StructContext struct() {
			return getRuleContext(StructContext.class,0);
		}
		public DeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CodexLatinusListener ) ((CodexLatinusListener)listener).enterDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CodexLatinusListener ) ((CodexLatinusListener)listener).exitDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CodexLatinusVisitor ) return ((CodexLatinusVisitor<? extends T>)visitor).visitDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclContext decl() throws RecognitionException {
		DeclContext _localctx = new DeclContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_decl);
		try {
			setState(123);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ES:
			case SR:
				enterOuterAlt(_localctx, 1);
				{
				setState(121);
				declS();
				}
				break;
			case ST:
				enterOuterAlt(_localctx, 2);
				{
				setState(122);
				struct();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctsContext extends ParserRuleContext {
		public TerminalNode MUN() { return getToken(CodexLatinusParser.MUN, 0); }
		public TerminalNode MAY() { return getToken(CodexLatinusParser.MAY, 0); }
		public L_metContext l_met() {
			return getRuleContext(L_metContext.class,0);
		}
		public FunctsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functs; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CodexLatinusListener ) ((CodexLatinusListener)listener).enterFuncts(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CodexLatinusListener ) ((CodexLatinusListener)listener).exitFuncts(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CodexLatinusVisitor ) return ((CodexLatinusVisitor<? extends T>)visitor).visitFuncts(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctsContext functs() throws RecognitionException {
		FunctsContext _localctx = new FunctsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_functs);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			match(MUN);
			setState(126);
			match(MAY);
			setState(127);
			l_met();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class L_metContext extends ParserRuleContext {
		public List<MetContext> met() {
			return getRuleContexts(MetContext.class);
		}
		public MetContext met(int i) {
			return getRuleContext(MetContext.class,i);
		}
		public L_metContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_l_met; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CodexLatinusListener ) ((CodexLatinusListener)listener).enterL_met(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CodexLatinusListener ) ((CodexLatinusListener)listener).exitL_met(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CodexLatinusVisitor ) return ((CodexLatinusVisitor<? extends T>)visitor).visitL_met(this);
			else return visitor.visitChildren(this);
		}
	}

	public final L_metContext l_met() throws RecognitionException {
		L_metContext _localctx = new L_metContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_l_met);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(129);
				met();
				}
				}
				setState(132); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==RT || _la==AC );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MetContext extends ParserRuleContext {
		public MetodoContext metodo() {
			return getRuleContext(MetodoContext.class,0);
		}
		public FuncionContext funcion() {
			return getRuleContext(FuncionContext.class,0);
		}
		public MetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_met; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CodexLatinusListener ) ((CodexLatinusListener)listener).enterMet(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CodexLatinusListener ) ((CodexLatinusListener)listener).exitMet(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CodexLatinusVisitor ) return ((CodexLatinusVisitor<? extends T>)visitor).visitMet(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MetContext met() throws RecognitionException {
		MetContext _localctx = new MetContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_met);
		try {
			setState(136);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case AC:
				enterOuterAlt(_localctx, 1);
				{
				setState(134);
				metodo();
				}
				break;
			case RT:
				enterOuterAlt(_localctx, 2);
				{
				setState(135);
				funcion();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MainContext extends ParserRuleContext {
		public TerminalNode MAI() { return getToken(CodexLatinusParser.MAI, 0); }
		public TerminalNode MAY() { return getToken(CodexLatinusParser.MAY, 0); }
		public L_instContext l_inst() {
			return getRuleContext(L_instContext.class,0);
		}
		public MainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CodexLatinusListener ) ((CodexLatinusListener)listener).enterMain(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CodexLatinusListener ) ((CodexLatinusListener)listener).exitMain(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CodexLatinusVisitor ) return ((CodexLatinusVisitor<? extends T>)visitor).visitMain(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MainContext main() throws RecognitionException {
		MainContext _localctx = new MainContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_main);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			match(MAI);
			setState(139);
			match(MAY);
			setState(140);
			l_inst();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class L_instContext extends ParserRuleContext {
		public List<InstContext> inst() {
			return getRuleContexts(InstContext.class);
		}
		public InstContext inst(int i) {
			return getRuleContext(InstContext.class,i);
		}
		public L_instContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_l_inst; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CodexLatinusListener ) ((CodexLatinusListener)listener).enterL_inst(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CodexLatinusListener ) ((CodexLatinusListener)listener).exitL_inst(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CodexLatinusVisitor ) return ((CodexLatinusVisitor<? extends T>)visitor).visitL_inst(this);
			else return visitor.visitChildren(this);
		}
	}

	public final L_instContext l_inst() throws RecognitionException {
		L_instContext _localctx = new L_instContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_l_inst);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(142);
				inst();
				}
				}
				setState(145); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 2362250155283709680L) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclSContext extends ParserRuleContext {
		public DeclSContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declS; }
	 
		public DeclSContext() { }
		public void copyFrom(DeclSContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class PrimitivoContext extends DeclSContext {
		public TerminalNode ES() { return getToken(CodexLatinusParser.ES, 0); }
		public TerminalNode ID() { return getToken(CodexLatinusParser.ID, 0); }
		public TerminalNode DPUN() { return getToken(CodexLatinusParser.DPUN, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public CompleContext comple() {
			return getRuleContext(CompleContext.class,0);
		}
		public PrimitivoContext(DeclSContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CodexLatinusListener ) ((CodexLatinusListener)listener).enterPrimitivo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CodexLatinusListener ) ((CodexLatinusListener)listener).exitPrimitivo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CodexLatinusVisitor ) return ((CodexLatinusVisitor<? extends T>)visitor).visitPrimitivo(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ArregloContext extends DeclSContext {
		public TerminalNode SR() { return getToken(CodexLatinusParser.SR, 0); }
		public TerminalNode ID() { return getToken(CodexLatinusParser.ID, 0); }
		public Access_aContext access_a() {
			return getRuleContext(Access_aContext.class,0);
		}
		public TerminalNode DPUN() { return getToken(CodexLatinusParser.DPUN, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public ListaContext lista() {
			return getRuleContext(ListaContext.class,0);
		}
		public TerminalNode PCO() { return getToken(CodexLatinusParser.PCO, 0); }
		public ArregloContext(DeclSContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CodexLatinusListener ) ((CodexLatinusListener)listener).enterArreglo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CodexLatinusListener ) ((CodexLatinusListener)listener).exitArreglo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CodexLatinusVisitor ) return ((CodexLatinusVisitor<? extends T>)visitor).visitArreglo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclSContext declS() throws RecognitionException {
		DeclSContext _localctx = new DeclSContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_declS);
		try {
			setState(162);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ES:
				_localctx = new PrimitivoContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(147);
				match(ES);
				setState(148);
				match(ID);
				setState(149);
				match(DPUN);
				setState(150);
				tipo();
				setState(152);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
				case 1:
					{
					setState(151);
					comple();
					}
					break;
				}
				}
				break;
			case SR:
				_localctx = new ArregloContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(154);
				match(SR);
				setState(155);
				match(ID);
				setState(156);
				access_a();
				setState(157);
				match(DPUN);
				setState(158);
				tipo();
				setState(159);
				lista();
				setState(160);
				match(PCO);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CondiContext extends ParserRuleContext {
		public TerminalNode SI() { return getToken(CodexLatinusParser.SI, 0); }
		public Paren_exprContext paren_expr() {
			return getRuleContext(Paren_exprContext.class,0);
		}
		public BloqueContext bloque() {
			return getRuleContext(BloqueContext.class,0);
		}
		public SinoContext sino() {
			return getRuleContext(SinoContext.class,0);
		}
		public CondiContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condi; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CodexLatinusListener ) ((CodexLatinusListener)listener).enterCondi(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CodexLatinusListener ) ((CodexLatinusListener)listener).exitCondi(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CodexLatinusVisitor ) return ((CodexLatinusVisitor<? extends T>)visitor).visitCondi(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CondiContext condi() throws RecognitionException {
		CondiContext _localctx = new CondiContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_condi);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(164);
			match(SI);
			setState(165);
			paren_expr();
			setState(166);
			bloque();
			setState(167);
			sino();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
